# assignment

./: Cargo.toml  README.md
crates/client/: Cargo.toml
crates/client/src/: main.rs  sha.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
