[workspace]
members = ["crates/server", "crates/client"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
rocket = "=0.5.0-rc.3"
ed25519-dalek = "2.0.0"
hex = "0.4.3"
merkletree = "0.23.0"
lazy_static = "1.4.0"
sha2 = "0.10.8"
reqwest = "0.11.22"
tokio = { version = "1.33.0", features = ["full"] }
rand = "0.8.5"
serde = {version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"