[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest.workspace = true
tokio.workspace = true
rand.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
merkletree.workspace = true
sha2.workspace = true